@@ -58,7 +58,8 @@ NEWS/ChangeLog for hydroGOF
 	o 'rfactor' : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
 	o 'rSD'     : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
 	o 'RSR'     : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
-	o 'NRMSE'   : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.	
+	o 'NRMSE'   : -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
+	o 'KGE'     : -) now it returns NA instead of '-Inf' when the denominator of Alpha or Beta were equal to zero.	
 	o New dimension checking (number of columns and rows) for all the functions that are applied over a matrix or data.frame
 	o fixed error in the documentation of 'rd' (thanks to Tom Purucker !)
 	
